docs: comprehensive README setup guide (2-VPS architecture, Supabase, Pipeline, CAPTCHA, cron) + add Turnstile to .env.example

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,13 @@ VALIDATE_GROK_VERDICT_TIMEOUT_MS=90000
 VALIDATE_GROK_INTEL_MODEL=grok-4-1-fast-non-reasoning
 VALIDATE_GROK_VERDICT_MODEL=grok-4-1-fast-reasoning
 
+# Anti-Spam CAPTCHA (Cloudflare Turnstile)
+# 1. Go to https://dash.cloudflare.com/ → Turnstile → Add Site
+# 2. Select "Managed" challenge type
+# 3. Copy site key and secret key
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=your_turnstile_site_key
+TURNSTILE_SECRET_KEY=your_turnstile_secret_key
+
 # Dune Analytics API (for blockchain data queries via MCP)
 # https://dune.com/settings/api
 DUNE_API_KEY=a5umuvq2cbgT0wusHz3DLA7tiLCeDX7K
